# Trustcert-ai

./: .env.example  .gitignore  ARCHITECTURE.md  ASA_FUSION_V2_SUMMARY.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSING_INFO.md  Procfile  QUICKSTART.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  makefile  package.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
apps/api/: blockchain.py  config  guardian.py  health.py  main.py
apps/api/crypto/: signing
apps/asa_fusion/: __init__.py  batch_processor.py  core_v2.py  crypto.py  engine.py  exceptions.py  monitoring.py  plugins.py  validation.py  wasm_interface.py
apps/asa_fusion/ai_layer/: __init__.py  analyzer.py
apps/asa_fusion/core/: __init__.py  interfaces.py  registry.py
apps/asa_fusion/plugins/: __init__.py  diophantine.py  presburger.py
apps/asa_fusion/security/: __init__.py  sandbox.py  validator.py
apps/asa_fusion/solvers/: __init__.py  z3_solver.py
examples/: README.md  asa_fusion_demo.py
github/workflows/: main.yml
tests/: test_asa_fusion.py  test_main.py
